bk_ida/gccida/g0/offsettable_nonstrict_memref_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/offsettable_nonstrict_memref_p/src/recog.c:2378:59: error: use of undeclared identifier 'machine_mode'
return *( _WORD *)op == 66 && offsettable_address_p( 0, ( machine_mode)*( ( unsigned __int8 *)op + 2), op->fld[0].rtx); 
                                                          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/offsettable_nonstrict_memref_p/src/obj/recog.o] Error 1
